// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SetKeyFieldNamePanel existing list, given properties 1`] = `
<div
  className="list__set-key-alert alert alert-info"
  role="alert"
>
  <div>
    Select a key value for this list which uniquely identifies the item. You can use "
    Auto integer key
    " to define your own below.
  </div>
  <div
    className="list__set-key-panel row"
  >
    <div
      className="col-xs-3"
    >
      Key Field 
      <span
        className="domain-no-wrap"
      >
        Name
        <span
          className="label-help-target"
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
            data-icon="question-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
         *
      </span>
    </div>
    <div
      className="col-xs-5"
    >
      <select
        className="form-control"
        name="keyField"
        onChange={[Function]}
        value={0}
      >
        <option
          value={-1}
        >
          Auto integer key
        </option>
        <option
          value={0}
        >
          SubjectID
        </option>
        <option
          value={1}
        >
          Name
        </option>
        <option
          value={2}
        >
          Family
        </option>
        <option
          value={5}
        >
          Species
        </option>
        <option
          value={8}
        >
          MaritalStatus
        </option>
        <option
          value={9}
        >
          CurrentStatus
        </option>
        <option
          value={10}
        >
          Gender
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`SetKeyFieldNamePanel list with auto integer key 1`] = `
<div
  className="list__set-key-alert alert alert-info"
  role="alert"
>
  <div>
    Select a key value for this list which uniquely identifies the item. You can use "
    Auto integer key
    " to define your own below.
  </div>
  <div
    className="list__set-key-panel row"
  >
    <div
      className="col-xs-3"
    >
      Key Field 
      <span
        className="domain-no-wrap"
      >
        Name
        <span
          className="label-help-target"
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
            data-icon="question-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
         *
      </span>
    </div>
    <div
      className="col-xs-5"
    >
      <select
        className="form-control"
        name="keyField"
        onChange={[Function]}
        value={0}
      >
        <option
          value={-1}
        >
          Auto integer key
        </option>
        <option
          value={0}
        >
          SubjectID
        </option>
        <option
          value={1}
        >
          Name
        </option>
        <option
          value={2}
        >
          Family
        </option>
        <option
          value={5}
        >
          Species
        </option>
        <option
          value={8}
        >
          MaritalStatus
        </option>
        <option
          value={9}
        >
          CurrentStatus
        </option>
        <option
          value={10}
        >
          Gender
        </option>
      </select>
    </div>
  </div>
</div>
`;

exports[`SetKeyFieldNamePanel new list, default properties 1`] = `
<div
  className="list__set-key-alert alert alert-info"
  role="alert"
>
  <div>
    Select a key value for this list which uniquely identifies the item. You can use "
    Auto integer key
    " to define your own below.
  </div>
  <div
    className="list__set-key-panel row"
  >
    <div
      className="col-xs-3"
    >
      Key Field 
      <span
        className="domain-no-wrap"
      >
        Name
        <span
          className="label-help-target"
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
            data-icon="question-circle"
            data-prefix="fas"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </span>
         *
      </span>
    </div>
    <div
      className="col-xs-5"
    >
      <select
        className="form-control"
        name="keyField"
        onChange={[Function]}
      >
        <option>
          Select a field from the list
        </option>
        <option
          value={-1}
        >
          Auto integer key
        </option>
      </select>
    </div>
  </div>
</div>
`;
